<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfile"
    android:orientation="vertical"
    >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:padding="20dp"
        android:background="#F44336">



        <TextView
            android:id="@+id/full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="10dp"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/baloo"
            android:includeFontPadding="false"
            android:text="Welcome"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/full_name"
            android:layout_marginLeft="10dp"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/baloo"
            android:includeFontPadding="false"
            android:text="TO"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/saferoute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:layout_marginLeft="10dp"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/baloo"
            android:includeFontPadding="false"
            android:text="SafeRoute"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />


    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginTop="-100dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            app:cardBackgroundColor="#F44336"
            app:cardElevation="10dp"
            app:cardCornerRadius="20dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/splashicon"/>




        </com.google.android.material.card.MaterialCardView>





    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/route_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Plot Route"
            android:textColor="@color/white"
            android:fontFamily="@font/baloo"
            android:textSize="15sp"
            android:textStyle="bold"
            app:cornerRadius="30dp"
            android:backgroundTint="#F44336"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/image_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Upload Image"
            android:textColor="@color/white"
            android:fontFamily="@font/baloo"
            android:textSize="15sp"
            android:textStyle="bold"
            app:cornerRadius="30dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="#F44336" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/logout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Logout"
            android:textColor="@color/white"
            android:fontFamily="@font/baloo"
            android:textSize="15sp"
            android:textStyle="bold"
            app:cornerRadius="30dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="#F44336" />




    </LinearLayout>




</LinearLayout>
