<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:visibility="visible"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/TF_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="4dp"
            android:hint="Enter Address"
            android:layout_weight="1.01"
            android:ems="10"
            android:inputType="textPersonName"/>

        <Button
            android:id="@+id/B_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            app:cornerRadius="15dp"
            android:backgroundTint="#F44336"
            android:fontFamily="@font/baloo"
            android:text="Search"/>

        <Button
            android:id="@+id/B_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            app:cornerRadius="15dp"
            android:backgroundTint="#F44336"
            android:fontFamily="@font/baloo"
            android:text="Cancel"/>



    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="6dp"
        app:cardCornerRadius="4dp"
        android:layout_margin="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="60dp">

                <com.google.android.gms.maps.MapView
                    android:id="@+id/map1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

                <ImageView
                    android:id="@+id/mapPin"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:visibility="invisible"
                    android:layout_centerInParent="true"
                    android:src="@drawable/pin1" />

            </RelativeLayout>

            <TextView
                android:id="@+id/tvAdd"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textColor="#000000"
                android:layout_alignParentBottom="true"
                android:visibility="invisible"
                android:textAlignment="center"
                android:layout_margin="2dp"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true">

                <Button
                    android:id="@+id/start_route_btn"
                    android:layout_width="150dp"
                    android:layout_height="60dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginBottom="2dp"
                    android:backgroundTint="#F44336"
                    android:fontFamily="@font/baloo"
                    android:text="Start Route"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:cornerRadius="15dp" />

                <Button
                    android:id="@+id/end_route_btn"
                    android:layout_width="150dp"
                    android:layout_height="60dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginBottom="2dp"
                    android:backgroundTint="#F44336"
                    android:fontFamily="@font/baloo"
                    android:text="End Route"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:cornerRadius="15dp" />


            </androidx.appcompat.widget.LinearLayoutCompat>


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>