<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UploadImage"
    >

    <LinearLayout
        android:id="@+id/layout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:weightSum="2"
        app:layout_constraintTop_toTopOf="parent">

        <!--Button for choosing image from gallery-->
        <Button
            android:id="@+id/btnChoose"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/baloo"
            android:text="Choose"
            app:backgroundTint="#F44336" />

        <!--Button for uploading image-->
        <Button
            android:id="@+id/btnUpload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/baloo"
            android:text="Upload"
            app:backgroundTint="#F44336" />
    </LinearLayout>

    <RelativeLayout
        android:layout_marginTop="70dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent">
        <!--Image View for showing image chosen from gallery-->
        <ImageView
            android:id="@+id/imgView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>